# advice-slip-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
.sdk/def/: advice-slip_0.1.0.json
.sdk/model/: sdk.aontu  sdk.json  sdk.jsonic
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  advice-slip.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: advice-slip_sdk.go  config.go  context.go  operation.go  registry.go  response.go  result.go  target.go  types.go
go/entity/: advice_entity.go  search_entity.go  types.go
go/feature/: audit_feature.go  base_feature.go  cache_feature.go  clienttrack_feature.go  debug_feature.go  idempotency_feature.go  log_feature.go  metrics_feature.go  netsim_feature.go  (+9 more)
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  advice-slip.rockspec  advice-slip_sdk.lua  advice-slip_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  adviceslip_sdk.php  composer.json  config.php  features.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  adviceslip_sdk.py  adviceslip_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  error.py
py/entity/: advice_entity.py  search_entity.py
py/feature/: audit_feature.py  base_feature.py  clienttrack_feature.py  idempotency_feature.py  log_feature.py  ratelimit_feature.py  rbac_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_advice_direct.py  test_advice_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_direct.py  test_search_entity.py
py/utility/: clean.py  done.py  feature_add.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_headers.py  prepare_method.py  prepare_params.py  result_basic.py  result_body.py  result_headers.py  transform_request.py  transform_response.py
rb/: AGENTS.md  AdviceSlip_sdk.gemspec  AdviceSlip_sdk.rb  AdviceSlip_types.rb  CLAUDE.md  README.md  REFERENCE.md  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  package-lock.json  package.json
(+380 files in other folders)
